--- a/views/index.ejs
+++ b/views/index.ejs
@@ -190,21 +190,52 @@
 	<div id="container-main" >
 		<div id="container-title">
 			<div id="title">
-        <div id="shareId">Share this game! <span></span></div>
-        <!-- <p>This is the title.</p> -->
+          <p>This is the title.</p>
 
-          <div id="share-container">
-          <div id="shareId">
-
-            <h3>Share this game!</h3>
-            <div id="share-button-container">
-              <div id="share-button">
-                <p>Copy This Link</p>
+          <div id="ui-container">
+            <div id="ui-bar-container">
+              <div id="cta-container">
+                <div id="cta">
+                  <p>Nintendo is always better with a buddy.</p>
+                </div>
+                
+              <div id="cta-button-container">
+                <div id="cta-button">
+                  <a href="#" id="cta-button-red">loading...</a>
+                </div> 
+<!-- 
+                <div id="cta-button">
+                  <a href="#" id="cta-button-green">Ready!</a>
+                </div>
+ -->
               </div>
             </div>
-            
-          </div>
-        </div>
+
+              <div id="red-glow-container">
+                <div id="red-glow">
+                  <p>This is the red light.</p>
+                </div>
+              </div>
+
+    <!--  
+              <div id="green-glow-container">
+                <div id="green-glow">
+                  <p>This is the green light.</p>
+                </div>
+              </div> 
+    -->
+
+              <div id="ui-bar">
+                <p>This will be the UI Bar.</p>
+              </div>
+             </div>
+
+    <div id="ui-popup-container">
+      <div id="up-popup">
+        <p>This will be the UI Popup.</p>
+      </div>
+    </div>
+  </div>
 
 			</div>
 		</div>
