--- a/views/index.ejs
+++ b/views/index.ejs
@@ -191,7 +191,7 @@
 		<div id="container-title">
 			<div id="title">
           <p>This is the title.</p>
-
+      </div>
           <div id="ui-container">
             <div id="ui-bar-container">
               <div id="cta-container">
