--- a/public/css/style.css
+++ b/public/css/style.css
@@ -11,7 +11,7 @@ div#wrapper-main {
 }
 
 div#container-main {
-  padding-top: 100px;
+  /*padding-top: 100px;*/
 	background: url(/images/bg.png) no-repeat;
 	width: 100%;
 	height: 100%;
