--- a/views/index.ejs
+++ b/views/index.ejs
@@ -230,12 +230,22 @@
               </div>
              </div>
 
-    <div id="ui-popup-container">
-      <div id="up-popup">
-        <p>This will be the UI Popup.</p>
-      </div>
-    </div>
-  </div>
+        <div id="ui-popup-container">
+          <div id="ui-popup">
+            <p>This will be the UI Popup.</p>
+          </div>
+          <div id="link-box">
+            <input type="text" name="sometext" size="100" value="http://localhost:3333/cefsqev8ov19" onClick='selectText(this);'>
+          </div>
+          <div id="copy-link-button-container">
+            <a href="#" id="copy-link-button">Click to copy link</a>
+          </div>
+          <div id="bff-container">
+            <div id="bff">
+              <p>Share this link with you BFF. Cause Nintendo is always better with a buddy.</p>
+            </div>
+          </div>
+        </div>
 
 			</div>
 		</div>
