--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -3,6 +3,7 @@
   <head>
     <title>Copypastel presents: Joynes</title>
     <link rel="stylesheet" href="/css/style.css" type="text/css" />
+    <script type="text/javascript" src="/js/lzma_worker.js"></script>
     <script type="text/javascript" src="/js/jquery-1.4.2.min.js"></script>
     <script type="text/javascript" src="/js/jquery.confirm.js"></script>
     <script type="text/javascript" src="/socket.io/socket.io.js"></script>
