--- a/public/css/style.css
+++ b/public/css/style.css
@@ -528,20 +528,23 @@ div#bff p {
   margin-top: 115px;
 }
 
+@-webkit-keyframes wiggle {
+  0% {
+    -webkit-transform: rotate(0deg);
+  }
 
+  50% {
+    -webkit-transform: rotate(10deg);
+  }
 
+  100% {
+    -webkit-transform: rotate(0deg);
+  }
+}
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+.wiggle {
+  -webkit-animation-name: wiggle;
+  -webkit-animation-duration: 0.2s;
+  -webkit-animation-iteration-count: infinite;
+  -webkit-animation-timing-function: linear;
+}
