--- a/public/css/style.css
+++ b/public/css/style.css
@@ -113,7 +113,7 @@ div#nes p {
   -webkit-transition: -webkit-transform 0.5s ease-in, left 0.5s ease-in;
   position: relative;
   top: 44px;
-  left: 214;
+  left: 214px;
  /* Old TV Position Screen
   top: 36px;
   left: 7px;*/
