change game confirmation popup html sucka!

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -251,6 +251,40 @@
         </div>
       </div>
     </div>
+    
+<!-- This is the Change Game Confirmation Popup! -->
+    <div id="change-confirm-container">
+    <div id="change-confirm">
+      <!-- Message -->
+      <div id="confirm-message-container">
+        <div id="confirm-message">
+          <p>Player 1 would like to play Bubble Bobble!</p>
+        </div>
+      </div>
+
+      <!-- Confirm Button -->
+      <div id="change-confirm-btn-container">
+        <div class="change-confirm-button" id="change-confirm-btn">
+          <p>Confirm</p>
+          <div id="thumbs-up">
+            <p>Thumbs up!</p>
+          </div>
+        </div>
+      </div>
+
+      <!-- Deny Button -->
+      <div id="change-deny-btn-container">
+        <div class="change-confirm-button" id="change-deny-btn">
+          <p>Deny</p>
+          <div id="thumbs-down">
+            <p>Thumbs down!</p>
+          </div>
+        </div>
+      </div>
+
+    </div>
+  </div>
+
     <div id="container-message-box">
       <div id="message-box"><span class="trigger"></span></div>
     </div>
