--- a/views/index.ejs
+++ b/views/index.ejs
@@ -231,12 +231,51 @@
 			<div id="title">
           <p>This is the title.</p>
       </div>
+
+      <!--
       <div id="player-statuses">
         <ul>
           <li>Player 1</li>
           <li id="player-2"></li>
         </ul>
       </div>
+      -->
+
+<!-- This is the HUD for Player VS Player -->
+      <div id="hud-container">
+        <div id="hud">
+         <div id="left-avatar-container">
+          <div id="left-avatar">
+            <p>Left Avatar</p>
+          </div>
+        </div>
+
+        <div id="left-login-container">
+          <div id="left-login">
+            <p>Login</p>
+          </div>
+        </div>
+
+        <div id="vs-container">
+          <div id="vs">
+            <p>VS</p>
+          </div>
+        </div>
+
+        <div id="right-share-container">
+          <div id="right-share">
+            <p>Share</p>
+          </div>
+        </div>
+
+        <div id="right-avatar-container">
+          <div id="right-avatar">
+            <p>right Avatar</p>
+          </div>
+        </div>
+      </div>
+    </div>
+
       <div id="ui-popup-container">
         <div id="ui-popup">
           <p>This will be the UI Popup.</p>
@@ -251,7 +290,7 @@
         </div>
       </div>
     </div>
-    
+
 <!-- This is the Change Game Confirmation Popup! -->
     <div id="change-confirm-container">
     <div id="change-confirm">
