--- a/views/index.ejs
+++ b/views/index.ejs
@@ -243,40 +243,40 @@
       </div>
       -->
 
-<!-- This is the HUD for Player VS Player -->
+      <!-- This is the HUD for Player VS Player -->
       <div id="hud-container">
         <div id="hud">
-         <div id="left-avatar-container">
-          <div id="left-avatar">
-            <p>Left Avatar</p>
-          </div>
-        </div>
+            <div id="left-avatar-container">
+              <div id="left-avatar">
+                <p>Left Avatar</p>
+              </div>
+            </div>
 
-        <div id="left-login-container">
-          <div id="left-login">
-            <p>Login</p>
-          </div>
-        </div>
+            <div id="left-login-container">
+              <div id="left-login">
+                <p>Player 1</p>
+              </div>
+            </div>
 
-        <div id="vs-container">
-          <div id="vs">
-            <p>VS</p>
-          </div>
-        </div>
+            <div id="vs-container">
+              <div id="vs">
+                <p>VS</p>
+              </div>
+            </div>
 
-        <div id="right-share-container">
-          <div id="right-share">
-            <p>Share</p>
-          </div>
-        </div>
+            <div id="right-share-container">
+              <div id="right-share">
+                <p>Invite</p>
+              </div>
+            </div>
 
-        <div id="right-avatar-container">
-          <div id="right-avatar">
-            <p>right Avatar</p>
+            <div id="right-avatar-container">
+              <div id="right-avatar">
+                <p>right Avatar</p>
+              </div>
+            </div>
           </div>
-        </div>
       </div>
-    </div>
 
       <div id="ui-popup-container">
         <div id="ui-popup">
